# primewatch2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  imgui.ini
.github/workflows/: cmake_build.yml
include/: json_optional.hpp
include/glad/: glad.h
prime_defs/prime1/: 010suffix.bt  CAi.bs  CAreaOctTree.bs  CCameraManager.bs  CGameAllocator.bs  CGameArea.bs  CGameGlobalObjects.bs  CGameState.bs  CMain.bs  CMemoryCardSys.bs  CMotionState.bs  CObjectList.bs  CPostConstructed.bs  CRandom16.bs  CResFactory.bs  CSimplePool.bs  CStateManager.bs  CToken.bs  CTweakPlayer.bs  CWorld.bs  CWorldState.bs  IObj.bs  IObjectStore.bs  SObjectTag.bs  rstl.bs
prime_defs/prime1/entities/: CActor.bs  CAtomicAlpha.bs  CAtomicBeta.bs  CBabygoth.bs  CBeetle.bs  CBloodFlower.bs  CBomb.bs  CBurrower.bs  CChozoGhost.bs  CCinematicCamera.bs  CCollisionActor.bs  CCollisionActorManager.bs  CDrone.bs  CEffect.bs  CElitePirate.bs  CEnergyBall.bs  CEntity.bs  CEyeball.bs  CFireFlea.bs  CFlaahgra.bs  CFlaahgraTentacle.bs  CFlickerBat.bs  CFlyingPirate.bs  CGameLight.bs  CHUDBillboardEffect.bs  CIceSheegoth.bs  CInterpolationCamera.bs  CJellyZap.bs  CMagdolite.bs  CMetaree.bs  CMetroid.bs  CMetroidBeta.bs  CMetroidPrimeEssence.bs  CMetroidPrimeExo.bs  CNewIntroBoss.bs  COmegaPirate.bs  CParasite.bs  CPatterned.bs  CPhazonHealingNodule.bs  CPhysicsActor.bs  (+54 more)
prime_defs/prime1/entities/camera/: CBallCamera.bs  CFirstPersonCamera.bs  CGameCamera.bs
prime_defs/prime1/entities/player/: CDamageVulnerability.bs  CHeathInfo.bs  CMorphBall.bs  CPlayer.bs  CPlayerCameraBob.bs  CPlayerGun.bs  CPlayerState.bs
prime_defs/prime1/math/: CAABB.bs  CAABBPrimitive.bs  CColor.bs  CMatrix4f.bs  CQuaternion.bs  CSpherePrimitive.bs  CTransform.bs  CVector3f.bs
prime_defs/prime1/render/: CAnimData.bs  CModel.bs  CModelData.bs
src/: GameMemory.cpp  GameMemory.h  MemoryAccess.cpp  MemoryAccess.hpp  PrimeWatch.cpp  PrimeWatch.hpp  PrimeWatchInput.cpp  PrimeWatchInput.hpp  game_value.h  glad.c  main.cpp
src/collision/: CollisionMesh.cpp  CollisionMesh.hpp
src/common/: GameMemory.cpp  game_value.h
src/defs/: EItemType.cpp  EItemType.hpp  GameDefinitions.cpp  GameDefinitions.hpp  GameObject.cpp  GameObject.hpp  GameObjectRenderers.cpp  GameObjectRenderers.hpp  GameOffsets.hpp  GameVtables.cpp  GameVtables.hpp
src/gl/: ImmediateModeBuffer.cpp  ImmediateModeBuffer.hpp  OpenGLMesh.cpp  OpenGLMesh.hpp  OpenGLShader.cpp  OpenGLShader.hpp  ShapeGenerator.cpp  ShapeGenerator.hpp
src/imgui/: imgui_impl_bgfx.cpp
src/prime1/: CAABB.hpp  CAABBPrimitive.hpp  CBallCamera.hpp  CCameraManager.hpp  CFirstPersonCamera.hpp  CGameAllocator.hpp  CGameArea.hpp  CGameGlobalObjects.hpp  CGameState.hpp  CHealthInfo.hpp  CMatrix4f.hpp  CObjectList.hpp  CObjectReference.hpp  CPair.hpp  CPlayerCameraBob.hpp  CPlayerState.hpp  CQuaternion.hpp  CRBTree.hpp  CRandom16.hpp  CReservedVector.hpp  CSimplePool.hpp  CSpherePrimitive.hpp  CStateManager.hpp  CTransform.hpp  CVector3f.hpp  CWorld.hpp  Prime1JsonDumper.cpp  SObjectTag.hpp
src/prime1/actors/: CActor.hpp  CEntity.hpp  CGameCamera.hpp  CMorphBall.hpp  CPhysicsActor.hpp  CPlayer.hpp  CPlayerGun.hpp
src/prime1/rstl/: rstl.hpp
src/utils/: AreaUtils.cpp  AreaUtils.hpp  GameObjectUtils.cpp  GameObjectUtils.hpp  MathUtils.cpp  MathUtils.hpp
src/world/: CollisionMesh.cpp  CollisionMesh.hpp  WorldRenderer.cpp  WorldRenderer.hpp
